--- a/index.html
+++ b/index.html
@@ -21,20 +21,27 @@
         <!-- <form role="search"> -->
             <input id="searchInput" onkeyup="searchByName(this.value.trim())" class="form-control w-50 mt-5 mb-2 mx-auto text-white bg-transparent rounded-pill border-2" type="search" placeholder="  Search" aria-label="Search">
           <!-- </form> -->
+
+
+          <!-- <div class="animate__animated animate__flipInX d-none">ggggghhhhhhhhhhhhhhhhhhhhhhhhhhhhggggggggggggggggggggggggggggggggggggggggg<div> -->
     </div>
+
+    <div id="btn-up" class="btnUp">
+        <i class="fa-solid fa-circle-arrow-up fa-2x "></i>
+        </div>
 
 
 <div class="side-nav-menu min-vh-100 position-fixed d-flex top-0">
     <div class="nav-tab  d-flex flex-column justify-content-between min-vh-100 p-3">
         <div class="links fw-lighter">
             <ul class="list-unstyled overflow-hidden ps-3">
-                <li  onclick="getMovies(); closeSideNav()" class="newPlaying py-3 position-relative cursor-pointer"><a href="">New Playing</a></li>
-                <li onclick="getAiringTodayMovies(); closeSideNav()"  class=" py-2 position-relative cursor-pointer"><a href=""  id="polo">Airing Today</a></li>
-                <li onclick="getOnAirMovies(); closeSideNav()" class=" py-3 position-relative cursor-pointer"><a href=""  id="">On The Air</a></li>
-                <li onclick="getPopularMovies(); closeSideNav()" class=" py-2 position-relative cursor-pointer"><a href=""  id="popular">Popular</a></li>
-                <li onclick="getTopRatedMovies(); closeSideNav()" class="py-3 position-relative cursor-pointer"><a href="">Top Rated</a></li>
-                <li onclick="getTrendyMovies(); closeSideNav()" class="py-2 position-relative cursor-pointer"><a href="" id="trendy">Trending</a></li>
-                <li onclick="getUpComingMovies(); closeSideNav()" class="py-3 position-relative cursor-pointer"><a href="" id="yourElementId">Up Coming</a></li>
+                <li id="newplaying"   class="newPlaying py-3 position-relative cursor-pointer">New Playing</li>
+                <li id="airtoday"  class=" py-2 position-relative cursor-pointer">Airing Today</li>
+                <li id="onair"  class=" py-3 position-relative cursor-pointer">On The Air</li>
+                <li id="popular"  class=" py-2 position-relative cursor-pointer">Popular</li>
+                <li id="toprated"  class="py-3 position-relative cursor-pointer">Top Rated</li>
+                <li id="trendy"  class="py-2 position-relative cursor-pointer">Trending</li>
+                <li id="upcoming"  class="py-3 position-relative cursor-pointer">Up Coming</li>
                 <li onclick=" closeSideNav()" class="py-2 position-relative cursor-pointer"><a href="#contact">Contact Us</a></li>
 
             </ul>
@@ -67,7 +74,12 @@
     <div class="container  ps-5">
         <div class="row py-1 gx-1 min-vh-100 " id="rowData">
             <span class="loader position-fixed top-50 start-50 end-50 bottom-50"></span> 
+
+
             
+
+
+
                     </div>
                 </div>
             </div>
@@ -78,34 +90,46 @@
 </div>
 </section>
 
-<section id="contact" class="container text-white  py-5">
+<section id="contact" class="container text-white ps-md-5  py-5">
     <h2>Contact US</h2>
     <form>
-        <div class="row mt-3 ps-2">
+        <div class="row mt-3 ps-2 ">
             <div class="col-md-6">
                 <input type="text" required="" id="name" maxlength="37" class="form-control mt-4" placeholder="Enter Your Name">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
             </div>
             <div class="col-md-6">
                 <input type="email" required="" id="email" class="form-control mt-4" placeholder="Enter Your Email">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
             </div>
             <div class="col-md-6">
                 <input type="number" required="" id="phone" class="form-control mt-4" placeholder="Enter Your Phone">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
             </div>
             <div class="col-md-6">
                 <input type="number" required="" id="age" class="form-control mt-4" placeholder="Enter Your Age">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
             </div>
             <div class="col-md-6 position-relative">
                 <input type="password" required="" id="password" class="form-control mt-4" placeholder="Enter Your Password">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
                 <span class="showPass" style="opacity: 0; bottom: -20px;"><i data-show="show" class="fa-solid fa-eye-slash"></i></span>
             </div>
             <div class="col-md-6">
                 <input type="password" required="" id="repassword" class="form-control mt-4" placeholder="ReEnter Password">
                 <span class="error"></span>
+                <div id="inputError" class="d-none alert text-danger">All inputs is required</div>
+    <div id="inputInvalid" class="d-none alert text-danger">incorrect email or password</div>
             </div>
             <div class="col-md-12  mt-4">
                 <button type="submit" class="form-btn rounded-2 mb-3 ">Submit</button>
