--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="btn-up" class="btnUp">
-        <i class="fa-solid fa-circle-arrow-up fa-2x "></i>
+        <i class="fa-solid fa-circle-arrow-up  fa-2x "></i>
         </div>
 
 
@@ -35,13 +35,13 @@
     <div class="nav-tab  d-flex flex-column justify-content-between min-vh-100 p-3">
         <div class="links fw-lighter">
             <ul class="list-unstyled overflow-hidden ps-3">
-                <li id="newplaying"   class="newPlaying py-3 position-relative cursor-pointer">New Playing</li>
-                <li id="airtoday"  class=" py-2 position-relative cursor-pointer">Airing Today</li>
-                <li id="onair"  class=" py-3 position-relative cursor-pointer">On The Air</li>
-                <li id="popular"  class=" py-2 position-relative cursor-pointer">Popular</li>
-                <li id="toprated"  class="py-3 position-relative cursor-pointer">Top Rated</li>
-                <li id="trendy"  class="py-2 position-relative cursor-pointer">Trending</li>
-                <li id="upcoming"  class="py-3 position-relative cursor-pointer">Up Coming</li>
+                <li id="newplaying"   class="newPlaying py-3 position-relative cursor-pointer"><span>New Playing</span></li>
+                <li id="airtoday"  class=" py-2 position-relative cursor-pointer"><span>Airing Today</span></li>
+                <li id="onair"  class=" py-3 position-relative cursor-pointer"><span>On The Air</span></li>
+                <li id="popular"  class=" py-2 position-relative cursor-pointer"><span>Popular</span></li>
+                <li id="toprated"  class="py-3 position-relative cursor-pointer"><span>Top Rated</span></li>
+                <li id="trendy"  class="py-2 position-relative cursor-pointer"><span>Trending</span></li>
+                <li id="upcoming"  class="py-3 position-relative cursor-pointer"><span>Up Coming</span></li>
                 <li onclick=" closeSideNav()" class="py-2 position-relative cursor-pointer"><a href="#contact">Contact Us</a></li>
 
             </ul>
